VSE: Preview uses proxy (not project) dims for pixel-based X/Y position translations in "Effect strip" section of Transform strip (but always renders correctly) #90855

Closed
opened 2021-08-22 19:53:00 +02:00 by David Salvo · 12 comments

System Information
Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce 9800 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.108

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-18 20:22, hash: a217e043be
Worked: Unsure

Short description of error
{F10306505,size=full}
Any pixel-based x/y translation applied in the "Effect strip" section of a Transform strip (not the "Transform" section common to all visual strips) will display according to the current proxy dims, not actual project dims. This means it will only display correctly when size is 100%/scene size. However, it will always render correctly. Note: Percentage-based translations work correctly.

Exact steps for others to reproduce the error
transform-effect-based-x-y-translation-previews-using-proxy-dims-instead-of-project-dims-when-using-pixel-units.zip

  • Add any image
  • Add Transform effect to image
  • Select Transform strip and under "Effect strip" transform settings change Translation unit to "Pixels"
  • Enter an X or Y translation
  • Change to different proxy sizes/percentages in sequencer preview
  • The same transform will appear differently for each size proxy
**System Information** Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce 9800 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.108 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-18 20:22, hash: `a217e043be` Worked: Unsure **Short description of error** {[F10306505](https://archive.blender.org/developer/F10306505/transform-effect-based-x-y-translation-previews-using-proxy-dims-instead-of-project-dims-when-using-pixel-units.gif),size=full} Any pixel-based x/y translation applied in the "Effect strip" section of a Transform strip (not the "Transform" section common to all visual strips) will display according to the current proxy dims, not actual project dims. This means it will only display correctly when size is 100%/scene size. However, it will always render correctly. Note: Percentage-based translations work correctly. **Exact steps for others to reproduce the error** [transform-effect-based-x-y-translation-previews-using-proxy-dims-instead-of-project-dims-when-using-pixel-units.zip](https://archive.blender.org/developer/F10306509/transform-effect-based-x-y-translation-previews-using-proxy-dims-instead-of-project-dims-when-using-pixel-units.zip) - Add any image - Add Transform effect to image - Select Transform strip and under "Effect strip" transform settings change Translation unit to "Pixels" - Enter an X or Y translation - Change to different proxy sizes/percentages in sequencer preview - The same transform will appear differently for each size proxy
Author

Added subscriber: @slinkeepie

Added subscriber: @slinkeepie

Added subscriber: @tintwotin

Added subscriber: @tintwotin

If you add this to the gif {Image_name,size=full} it'll show in full size.

If you add this to the gif `{Image_name,size=full}` it'll show in full size.
Author

In #90855#1209798, @tintwotin wrote:
If you add this to the gif {Image_name,size=full} it'll show in full size.

Oh awesome, thanks!

> In #90855#1209798, @tintwotin wrote: > If you add this to the gif `{Image_name,size=full}` it'll show in full size. Oh awesome, thanks!
Chris247 commented 2021-08-23 07:17:35 +02:00 (Migrated from localhost:3001)

Added subscriber: @Chris247

Added subscriber: @Chris247
Chris247 commented 2021-08-23 07:17:35 +02:00 (Migrated from localhost:3001)

This is great! Thank you for sharing.

This is great! Thank you for sharing.
Author

Is nowhere safe from spam? :O

Is nowhere safe from spam? :O
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.

This issue was referenced by 84f7bf56a8

This issue was referenced by 84f7bf56a8c3bc520583b6e49e954d84469659db

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-10-25 05:41:28 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90855
No description provided.